Cambios a mi portafolio y nuevos ejercicios de DEVf

--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,17 +12,29 @@
   <body>
     <header>
       <h1 class="neon">Abbad Garcia</h1>
-      <button class="button-62" role="button">Descargar CV</button>
+      <button class="button-62" role="button">Mi portafolio</button>
     </header>
     <main>
         <section class="img-perfil">
             <img src="img/perfil.png" alt="foto de perfil">
         </section>
         <section class="Welcome-message">
-            <h2>Hola mi nombre es Abbad Garcia</h2>
-            <p>Soy Desarrollador De Software</p>
-            <p>Apasionado de la tecnologia y el desarrollo web</p>
+            <h2>Hola, mi nombre es Abbad Garcia</h2>
+            <p><span class="neon">Soy Software engineer</span></p>
+            <p>Apasionado de la tecnologia y el desarrollo web.</p>
         </section>
+        <section class="social-media">
+          <a href="#"><img src="img/linkedin.png" alt="#"></a>
+          <a href="#"><img src="img/signo-de-github.png" alt="#"></a>
+          <a href="#"><img src="img/instagram.png" alt="#"></a>
+        </section>
+        <section class="recent-project">
+          <button class="button-85">Mi proyecto más reciente</button>
+          <button class="button-62" role="button">Mi portafolio</button>
+        </section>
+        <footer class="copyR">
+           <p>©copyright Página creada por Abbad Garcia todos os derechos reservados.</p>
+        </footer>
     </main>
   </body>
 </html>
