--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet/less" type="text/css" href="style.less" />
     <link rel="stylesheet" href="normalize.css" />
     <script src="https://cdn.jsdelivr.net/npm/less@4" defer></script>
+    <script src="noyusar.js"></script>
     <title>Document</title>
   </head>
   <body>
